Fixing build issues

--- a/Acoustic_Raytracing/CMakeLists.txt
+++ b/Acoustic_Raytracing/CMakeLists.txt
@@ -18,13 +18,15 @@ find_package(CUDA REQUIRED)
 cuda_select_nvcc_arch_flags(ARCH_FLAGS, Auto) # optional argument for arch to add
 LIST(APPEND CUDA_NVCC_FLAGS ${ARCH_FLAGS})
 set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} -gencode=arch=compute_61,code=sm_61)
-include_directories(${OptiX_INCLUDE} ${PROJECT_SOURCE_DIR}/common/cuda_helpers ${SNDFILE_INCLUDE_DIR} ${PORTAUDIO_INCLUDE_DIR})
-link_directories(${SNDFILE_INCLUDE_DIR} ${PORTAUDIO_INCLUDE_DIR})
+include_directories(${OptiX_INCLUDE} ${PROJECT_SOURCE_DIR}/common/cuda_helpers ${SNDFILE_INCLUDE_DIR} ${PORTAUDIO_INCLUDE_DIR} /usr/local/include)
+link_directories(${SNDFILE_INCLUDE_DIR} ${PORTAUDIO_INCLUDE_DIR} /usr/local/lib)
 cuda_compile_and_embed(embedded_ptx_code devicePrograms.cu)
 
 cuda_add_executable(Acoustic_Raytracing.out
   audio.cpp
   audio.h
+  corelink.cpp
+  corelink.h
   kernels.cu
   kernels.cuh
   ${embedded_ptx_code}
@@ -52,7 +54,8 @@ target_link_libraries(Acoustic_Raytracing.out
   ${optix_LIBRARY}
   ${CUDA_LIBRARIES}
   ${CUDA_CUDA_LIBRARY}
-  ${SNDFILE_LIB}
-  ${PORTAUDIO_LIB}
+  sndfile.so
   ${CUDA_cufft_LIBRARY}
+  Corelink.so
+  CorelinkWrapper.so
   )
